# RPGchat

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  MEMORY.md  README.md  cli.py  pyproject.toml
.claude/: settings.json
docs/: PROGRESS.md
docs/adr/: 0001-info-visibility-model.md  0002-unified-d20-system.md  0003-fortune-system-for-npcs.md  0004-narrative-unified-output.md
docs/issues/: 001-project-scaffold-types.md  002-action-unit-parser.md  003-character-store.md  004-dialogue-log-environment-store.md  005-scene-tracker.md  006-context-assembler.md  007-llm-npc-generation.md  008-llm-judgment-environment.md  009-dice-engine.md  010-campaign-background-parser.md  011-game-loop-cli.md  012-rules-config-skill-check.md  013-checkpoint-manager.md  014-local-persistence.md  015-player-absent-mode.md
docs/prd/: 0000-core-engine.md  0000b-v1-revision.md  0001-narrative-judgment-plot.md
presets/characters/: 前刑警佐佐木健吾.json  年轻骑士塞德里克.json  情报贩子井上真由子.json  极道千金黑川美雪.json  神秘旅者艾拉.json  酒馆老板加雷斯.json
presets/worlds/: 新东京暗流.json  艾瑟兰大陆.json
src/rpg_chat/: auto_mode.py  campaign.py  checkpoint.py  confirmation.py  context.py  dice.py  environment.py  fortune.py  (+12 more)
tests/: test_auto_mode.py  test_campaign.py  test_checkpoint.py  test_confirmation.py  test_context.py  test_d20_system.py  test_dice.py  test_e2e.py  test_environment.py  test_fortune.py  test_game_loop.py  test_judgment.py  test_llm.py  test_llm_integration.py  test_parser.py  test_persistence.py  test_preset_loader.py  test_rules.py  test_scene.py  test_skill_check.py  test_store.py
(+11 files in other folders)
